--- a/Reportinator3000x/Reportinator3000x.csproj
+++ b/Reportinator3000x/Reportinator3000x.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ReportLib">
-      <HintPath>..\..\Git\GettingReal\ReportLib\bin\Debug\ReportLib.dll</HintPath>
+      <HintPath>..\..\GettingReal\ReportLib\bin\Debug\ReportLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
