--- a/Reportinator3000x/Reportinator3000x.csproj
+++ b/Reportinator3000x/Reportinator3000x.csproj
@@ -32,10 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ReciLib">
-      <HintPath>..\..\ReciWiz\ReciLib\bin\Debug\ReciLib.dll</HintPath>
-    </Reference>
-    <Reference Include="ReportLib">
+    <Reference Include="ReportLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\GettingReal\ReportLib\bin\Debug\ReportLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -51,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +92,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
