Added Modules page Alterede Cancel button in main to Remove

--- a/Reportinator3000x/Reportinator3000x.csproj
+++ b/Reportinator3000x/Reportinator3000x.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModulesWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModulesWindow.Designer.cs">
+      <DependentUpon>ModulesWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="PageWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     </Compile>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModulesWindow.resx">
+      <DependentUpon>ModulesWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PageWindow.resx">
       <DependentUpon>PageWindow.cs</DependentUpon>
