--- a/Reportinator3000x/Reportinator3000x.csproj
+++ b/Reportinator3000x/Reportinator3000x.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Report.Designer.cs">
       <DependentUpon>Report.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportRepo.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
