--- a/Reportinator3000x/Reportinator3000x.csproj
+++ b/Reportinator3000x/Reportinator3000x.csproj
@@ -32,8 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ReportLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="ReportLib">
       <HintPath>..\..\GettingReal\ReportLib\bin\Debug\ReportLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
