--- a/Reportinator3000x/Reportinator3000x.csproj
+++ b/Reportinator3000x/Reportinator3000x.csproj
@@ -49,6 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller.cs" />
+    <Compile Include="EditPageWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditPageWindow.Designer.cs">
+      <DependentUpon>EditPageWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditReportWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     <Compile Include="Report.Designer.cs">
       <DependentUpon>Report.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="EditPageWindow.resx">
+      <DependentUpon>EditPageWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditReportWindow.resx">
       <DependentUpon>EditReportWindow.cs</DependentUpon>
     </EmbeddedResource>
